examples/test/testpolicy13872.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13872
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key4: value16
      key2: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value8
      podSelector:
        matchLabels:
          key11: value40
          key3: value11
